2003-04-09  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Reading a 16 bit word in paged load needs to swap the
	bytes since the 'R' command returns MSB first and the internal buffer
	stores LSB first.

2003-04-07  Theodore A. Roth  <troth@openavr.org>

	* stk500.c: Don't print out read/write byte progress unless the verbose
	option is given.

2003-04-05  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Re-add the avr910 byte read/write methods which were 
	removed in my previous patch. Terminal mode read/writes are broken
	without those methods. D'oh!

2003-04-05  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Refactor to allow probing for auto addr increment. If auto
	incr supported by programmer hw, don't send addr for every byte.

2003-04-03  Eric B. Weddington <eric@umginc.net>
    * confwin.c: Fix bug that allows garbage for non-existent user
    config filename on Windows.

2003-03-24  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Add note about avr910 support.

2003-03-23  Theodore A. Roth  <troth@openavr.org>

	* avr.c (avr_write): Add call to pgm->write_setup() before the write
	loop.
	* avr910.c: Change all show_func_info() calls to no_show_func_info().
	Add read/write to/from flash/eeprom memory functionality.
	* pgm.c: Initialize pgm->write_setup.
	* pgm.h: Add write_setup field to PROGRAMMER structure.
	* ser_posix.c: Remove unneeded cast in verbosity code.

2003-03-23  Theodore A. Roth  <troth@openavr.org>

	* ser_posix.c: Limit verbose output to 2 chars.

2003-03-23  Theodore A. Roth  <troth@openavr.org>

	* ser_posix.c: Add verbose level > 3 output for send and recv functions.

2003-03-23  Theodore A. Roth  <troth@openavr.org>

	* avr.c: Add avr_read_byte_default().
	Have avr_read_byte() call pgm->read_byte() or avr_read_byte_default().
	Add avr_write_byte_default().
	Have avr_write_byte() call pgm->write_byte or avr_write_byte_default().
	* pgm.c: Initialize pgm->write_byte and pgm->read_byte.